<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LaunchModel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="standard">standard</string>
    <string name="singleTop">singleTop</string>
    <string name="singleTask">singleTask</string>
    <string name="singInstant">singInstant</string>
    <string name="start_standard">启动一个standard模式的activity</string>

</resources>