<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStandard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standard"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSingleTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/singleTop"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSingleTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/singleTask"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSingleInstant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/singInstant"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </TextView>

    <EditText
        android:id="@+id/tv_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_click"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_standard" />

</LinearLayout>